--- a/angular-material-examples/src/app/features/material-checkbox-example/material-checkbox-example.component.html
+++ b/angular-material-examples/src/app/features/material-checkbox-example/material-checkbox-example.component.html
@@ -1,10 +1,5 @@
 <div class="container main-container">
     <table class="mat-table" >      
-<<<<<<< HEAD
-
-=======
-     
->>>>>>> f6fcf573c55b9a80a3e2c48d02b83db9c636b453
             <tr class="mat-header-row">
                 <th class="mat-header-cell">
                         <mat-checkbox #chkAll="matCheckbox" checked [(ngModel)]="checkAll" (change)="selectAll($event.checked)"></mat-checkbox>
@@ -43,11 +38,10 @@
             </tr>       
 
     </table>
+    {{modelo?.nome}}
+    {{modelo?.sobrenome}}
+    {{modelo?.teste}}
 
     <button type="button" (click)="LogaStatus()" class="btn btn-dark">Logar</button>
+</div>
 
-<<<<<<< HEAD
-</div>
-=======
-</div>
->>>>>>> f6fcf573c55b9a80a3e2c48d02b83db9c636b453
