--- a/angular-material-examples/src/app/navegacao/menu/menu.component.html
+++ b/angular-material-examples/src/app/navegacao/menu/menu.component.html
@@ -8,9 +8,16 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">    
           
+
           <li class="nav-item">
-              <a class="nav-link" [routerLink]="['/features']">Features</a>
-            </li>
+            <a class="nav-link" [routerLink]="['/html-css']">Html/CSS</a>
+          </li>
+
+          <li class="nav-item">
+              <a class="nav-link" [routerLink]="['/angular']">Angular</a>
+          </li>
+
+
         </ul>
       </div>
     </div>
